Sync react with djangogit aagit aa

--- a/review/templates/play.html
+++ b/review/templates/play.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <script src='{% static "review/play.js" %}' type='text/javascript'></script>
+<script src='{% static "review/bundle.js" %}'></script>
 <link rel='stylesheet' href='{% static "review/play.css" %}'></link>
 
 <h1>Play page</h1>
