Change language name to title, add automatic slug and fix dispatch loop

--- a/staticfiles/review/components/app.less
+++ b/staticfiles/review/components/app.less
@@ -1,7 +1,7 @@
 body {
-  background-color: red;
+  background-color: #eee;
 }
 
 .word-info {
-  background-color: blue;
+  background-color: white;
 }
